@@ -1,12 +1,7 @@
 {
   "count": 46,
-  "uniques": 16,
+  "uniques": 17,
   "clones": [
-    {
-      "timestamp": "2024-01-28T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-01-29T00:00:00Z",
       "count": 4,
@@ -69,6 +64,11 @@
     },
     {
       "timestamp": "2024-02-10T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-02-11T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
